# Projects-Starters

./: README.md
Express-Backend-Starter/: .env.example  package.json  tsconfig.json
Express-Backend-Starter/src/: app.ts  index.ts
Express-Backend-Starter/src/configs/: database.config.ts  env.config.ts  http.config.ts
Express-Backend-Starter/src/middlewares/: asyncHandler.middleware.ts  errorHandler.middleware.ts
Express-Backend-Starter/src/models/: user.model.ts
Express-Backend-Starter/src/utils/: app-error.ts  get-env.ts
Express-Starter-With-Modular-Structure/: .env  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
Express-Starter-With-Modular-Structure/src/: index.ts
Express-Starter-With-Modular-Structure/src/configs/: env.config.ts  http.config.ts
Express-Starter-With-Modular-Structure/src/database/: database.ts
Express-Starter-With-Modular-Structure/src/examples/: error-examples.ts
FastAPI-Backend-Starter-Kit/: .dockerignore  .gitignore  pyproject.toml
FastAPI-Backend-Starter-Kit/scripts/: __init__.py
FastAPI-Backend-Starter-Kit/src/app/: main.py
FastAPI-Backend-Starter-Kit/src/app/api/: __init__.py
FastAPI-Backend-Starter-Kit/src/app/api/v1/: api.py
FastAPI-Backend-Starter-Kit/src/app/api/v1/endpoints/: __init__.py
FastAPI-Backend-Starter-Kit/src/app/config/: __init__.py
FastAPI-Backend-Starter-Kit/src/app/db/: __init__.py
FastAPI-Backend-Starter-Kit/src/app/services/: __init__.py
NestJs-Backend-Starter-Kit/: README.md
NextJs-Project-Starter/: package.json
NextJs-Project-Starter/.husky/: pre-commit
(+8 files in other folders)
