[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "abdulreehman20", email = "abdulreehman20@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
app = "app:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
